[tool.poetry]
name = "uos-hardware"
version = "0.1.0"
description = "A hardware abstraction layer for microcontrollers running UOS compliant firmware."
authors = ["nulltek <steve.public@nulltek.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
# Note if changing project python versions considerations should be made for github workflow version.
python = "^3.10"
pyserial = "^3.5"
pylint = "^2.14.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
