[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uos-hardware"
version = "0.7.0"
description = "A hardware abstraction layer for microcontrollers running UOS compliant firmware."
authors = [
    { name = "CreatingNull (Steve Richardson)", email="steve.public@nulltek.xyz" }
]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
    "pyserial",
]

[project.urls]
homepage = "https://github.com/CreatingNull/UOS-Hardware"
documentation = "https://uos-hardware.nulltek.xyz"

[tool.setuptools]
packages = ["uoshardware", "uoshardware.devices", "uoshardware.interface"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]
command_line = "-m pytest tests/"
